// dashboard - upload - fix checklist name and count overlapping

--- a/webapp/sass/views/dashboard/upload.scss
+++ b/webapp/sass/views/dashboard/upload.scss
@@ -106,7 +106,8 @@
 }
 
 .label-document-name{
-  font-size:1.1vw;
+  font-size: 1.0vw;
+  max-width: 80%;
 }
 
 .label-document-name-header{
